Changed order of docs, fixed sidebar bottom issue on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -293,7 +293,7 @@ p code {
   main nav.sidebar {
     border-left: 1px solid #ccc;
     left: 100%;
-    height: 100%;
+    bottom: 0;
     min-width: 25%;
     padding-left: 10px;
     background: #f1f1f1;
